--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --env=jsdom --verbose"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.0",
@@ -15,11 +16,29 @@
     "react-redux": "^7.2.6"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.3",
     "@types/node": "16.11.13",
     "@types/react": "17.0.37",
+    "babel-jest": "^27.4.5",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "jest": "^27.4.5",
+    "jest-css-modules": "^2.1.0",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.2",
     "typescript": "4.5.4"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/.next/",
+      "<rootDir>/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "\\.(css)$": "<rootDir>/node_modules/jest-css-modules"
+    }
   }
 }
